--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,14 @@
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.2",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
         "fzaninotto/faker": "^1.9",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "5.1.*",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/maker-bundle": "^1.19",
         "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "5.1.*"
     },
